# snakell

./: README.md  Setup.hs  TODO.md  snakell.cabal  stack.yaml
src/: Engine.hs  Main.hs  TUI.hs
